tests/transpiler/x/scala/string_in_operator.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 13:01:55 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        val s = "catch"
        println("cat" in s)
        println("dog" in s)
    }
}
